fixed layout home page action btn layout issue

--- a/v1/style.css
+++ b/v1/style.css
@@ -99,10 +99,13 @@ html{
   box-shadow: 4px 4px 0px rgb(106, 183, 255);
 }
 .action-btn-container {
-  width: 100%;
+  width: 70%;
+  margin: auto;
+  flex-direction: row;
+  text-align: center;
 }
-.action-btn-containe button {
-  border-radius: 50%;
+.action-btn-container a {
+  min-width: 200px;
 }
 .slideUp{
   animation: slideUp 0.4s ease 1;
@@ -132,7 +135,6 @@ html{
   background-color: white;
   max-width: 300px;
   border-radius: 10px;
-
 }
 #contact-form input, #contact-form textarea{
   width: 90%;
@@ -169,7 +171,7 @@ html{
 @keyframes slideLeft {
   0% {
     opacity: 0;
-    transform: translateX(50%);
+    transform: translateX(30%);
   }
 
   100% {
@@ -179,7 +181,7 @@ html{
 }
 @keyframes slideRight {
   0% {
-    transform: translateX(-50%);
+    transform: translateX(-30%);
   }
 
   100% {
@@ -222,6 +224,9 @@ html{
   }
   #side-nav{
     display: block;
+  }
+  .action-btn-container{
+    flex-direction: column;
   }
   .service-card{
     min-width: calc(230px + 10vw);
